Revert "On progress data list User and update Velacro dll"
This reverts commit 7e3d01c5f53862e9fd9663f56f75f80ff03dccf0.

--- a/TestWPPL/TestWPPL.csproj
+++ b/TestWPPL/TestWPPL.csproj
@@ -86,8 +86,7 @@
     <Reference Include="System.Xaml">
       <RequiredTargetFramework>4.0</RequiredTargetFramework>
     </Reference>
-    <Reference Include="Velacro, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
+    <Reference Include="Velacro">
       <HintPath>..\Framework\Velacro.dll</HintPath>
     </Reference>
     <Reference Include="WindowsBase" />
