--- a/TestWPPL/TestWPPL.csproj
+++ b/TestWPPL/TestWPPL.csproj
@@ -105,6 +105,11 @@
     <Compile Include="SuperAdminWindow.xaml.cs">
       <DependentUpon>SuperAdminWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SuperAdmin\ListHealthAgency\HealthAgency.cs" />
+    <Compile Include="SuperAdmin\ListHealthAgency\ListHealthAgencyController.cs" />
+    <Compile Include="SuperAdmin\ListHealthAgency\ListHealthAgencyPage.xaml.cs">
+      <DependentUpon>ListHealthAgencyPage.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SuperAdmin\ListUserModul\ListUserController.cs" />
     <Compile Include="Dashboard\Dashboard.xaml.cs">
       <DependentUpon>Dashboard.xaml</DependentUpon>
@@ -144,6 +149,10 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="SuperAdminWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SuperAdmin\ListHealthAgency\ListHealthAgencyPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
