--- a/TestWPPL/TestWPPL.csproj
+++ b/TestWPPL/TestWPPL.csproj
@@ -101,6 +101,11 @@
     <Compile Include="AdminWindow.xaml.cs">
       <DependentUpon>AdminWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Admin\ListPolyclinic\ListPolyclinicController.cs" />
+    <Compile Include="Admin\ListPolyclinic\ListPolyclinicPage.xaml.cs">
+      <DependentUpon>ListPolyclinicPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\ListPolyclinic\Polyclinic.cs" />
     <Compile Include="ApiAntrianSehat.cs" />
     <Compile Include="SuperAdminWindow.xaml.cs">
       <DependentUpon>SuperAdminWindow.xaml</DependentUpon>
@@ -122,6 +127,10 @@
     </Compile>
     <Compile Include="SuperAdmin\ListUserModul\User.cs" />
     <Page Include="AdminWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Admin\ListPolyclinic\ListPolyclinicPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -200,9 +209,7 @@
   <ItemGroup>
     <Resource Include="navbar logo.png" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Admin\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
