--- a/TestWPPL/TestWPPL.csproj
+++ b/TestWPPL/TestWPPL.csproj
@@ -254,6 +254,16 @@
     <Resource Include="navbar logo.png" />
   </ItemGroup>
   <ItemGroup />
+  <ItemGroup>
+    <Resource Include="assets\images\ANTRIANsehat.png" />
+    <Resource Include="assets\images\clinic.png" />
+    <Resource Include="assets\images\list.png" />
+    <Resource Include="assets\images\LOGIN.png" />
+    <Resource Include="assets\images\navbar logo.png" />
+    <Resource Include="assets\images\puskesmas.png" />
+    <Resource Include="assets\images\REGISTER.png" />
+    <Resource Include="assets\images\search.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
