--- a/TestWPPL/TestWPPL.csproj
+++ b/TestWPPL/TestWPPL.csproj
@@ -131,6 +131,11 @@
     <Compile Include="SuperAdmin\ListHealthAgency\ListHealthAgencyPage.xaml.cs">
       <DependentUpon>ListHealthAgencyPage.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SuperAdmin\ListPolyMaster\ListPolyMasterPage.xaml.cs">
+      <DependentUpon>ListPolyMasterPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SuperAdmin\ListPolyMaster\PolyMaster.cs" />
+    <Compile Include="SuperAdmin\ListPolyMaster\ListPolyMasterController.cs" />
     <Compile Include="SuperAdmin\ListUserModul\CreateUser\CreateUserController.cs" />
     <Compile Include="SuperAdmin\ListUserModul\CreateUser\CreateUserPage.xaml.cs">
       <DependentUpon>CreateUserPage.xaml</DependentUpon>
@@ -201,6 +206,7 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="SuperAdmin\ListPolyMaster\ListPolyMasterPage.xaml" />
     <Page Include="SuperAdmin\ListUserModul\CreateUser\CreateUserPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -253,7 +259,10 @@
   <ItemGroup>
     <Resource Include="navbar logo.png" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="SuperAdmin\ListPolyMaster\CreatePolyMaster" />
+    <Folder Include="SuperAdmin\ListPolyMaster\EditPolyMaster" />
+  </ItemGroup>
   <ItemGroup>
     <Resource Include="assets\images\ANTRIANsehat.png" />
     <Resource Include="assets\images\clinic.png" />
