--- a/TestWPPL/TestWPPL.csproj
+++ b/TestWPPL/TestWPPL.csproj
@@ -98,6 +98,10 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="About\About.xaml.cs">
+      <DependentUpon>About.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="About\AboutController.cs" />
     <Compile Include="AdminWindow.xaml.cs">
       <DependentUpon>AdminWindow.xaml</DependentUpon>
     </Compile>
@@ -163,6 +167,7 @@
       <DependentUpon>ListUserPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="SuperAdmin\ListUserModul\User.cs" />
+    <Page Include="About\About.xaml" />
     <Page Include="AdminWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
