--- a/TestWPPL/TestWPPL.csproj
+++ b/TestWPPL/TestWPPL.csproj
@@ -203,6 +203,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="Simple Styles.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
     <Page Include="SuperAdminWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -283,6 +287,25 @@
     <Resource Include="assets\images\puskesmas.png" />
     <Resource Include="assets\images\REGISTER.png" />
     <Resource Include="assets\images\search.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\images\team\15.jpg" />
+    <Resource Include="assets\images\team\21.png" />
+    <Resource Include="assets\images\team\22.png" />
+    <Resource Include="assets\images\team\27.png" />
+    <Resource Include="assets\images\team\3.png" />
+    <Resource Include="assets\images\team\4.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="assets\images\Sponsor\altera.png" />
+    <Resource Include="assets\images\Sponsor\Maulidan.png" />
+    <Resource Include="assets\images\Sponsor\Profilku.png" />
+    <Resource Include="assets\images\Sponsor\pti.png" />
+    <Resource Include="assets\images\Sponsor\RIns.png" />
+    <Resource Include="assets\images\Sponsor\RTech.png" />
+    <Resource Include="assets\images\Sponsor\Sindika.png" />
+    <Resource Include="assets\images\Sponsor\trustmedis.png" />
+    <Resource Include="assets\images\Sponsor\VirtualHive.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets" Condition="Exists('..\packages\MaterialDesignThemes.3.2.0\build\MaterialDesignThemes.targets')" />
