--- a/TestWPPL/TestWPPL.csproj
+++ b/TestWPPL/TestWPPL.csproj
@@ -98,8 +98,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
-    <Compile Include="About\About.xaml.cs">
-      <DependentUpon>About.xaml</DependentUpon>
+    <Compile Include="About\AboutPage.xaml.cs">
+      <DependentUpon>AboutPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="About\AboutController.cs" />
     <Compile Include="AdminWindow.xaml.cs">
@@ -167,7 +167,7 @@
       <DependentUpon>ListUserPage.xaml</DependentUpon>
     </Compile>
     <Compile Include="SuperAdmin\ListUserModul\User.cs" />
-    <Page Include="About\About.xaml" />
+    <Page Include="About\AboutPage.xaml" />
     <Page Include="AdminWindow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
